# acc_bot

./: .dev.env  .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  main.py  main_bot_v2.py  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  dependencies.py  exceptions.py  main.py
app/analytics/: dependencies.py  handlers.py  models.py  repository.py  schemas.py  service.py
app/roles/: handlers.py  models.py  repository.py  schemas.py  service.py
app/users/: dependencies.py  enums.py  exceptions.py  handlers.py  models.py  repository.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 1184ed29364e_add_user_roles.py  160bfa9738ec_2_nu_tam_mnogo_dobavil.py  160bfa9738ec_nu_tam_mnogo_dobavil.py  17862ba40aaa_any_fix.py  19381516b6e3_any_fix.py  1bd2cb63cfaa_change_relationship.py  1c19df07bec4_chancge_role_field.py  2a6f08609654_any_fix.py  36e331e483fe_1_init.py  36e331e483fe_init.py  4896a77c8e8a_init.py  4e2304cf27d1_change_user_model.py  54ac64393b91_6_change_user_column.py  54ac64393b91_any_fix.py  69da94d7fe3f_5_chat_title_was_null.py  69da94d7fe3f_chat_title_was_null.py  6b0913def12f_change.py  733f955136c2_phrase.py  7fa1357da182_add_user_roles.py  86994e6dfa00_add_uniq_index.py  89142bb07146_phrase.py  8b55ae7d64b3_seed_base_roles.py  8bf164e27fe4_change_user_model.py  9084c544715b_fix_bugs_relationship.py  92f5d08306f0_seed_bad_phrase.py  97467cd1ffd2_init.py  9fc3dcd89e08_change_user_model.py  a2124eb2b7bf_any_fix.py  b29c91a625b2_3_create_chat_tables.py  b29c91a625b2_any_changes.py  b3bf14e9abe9_change_user_model.py  c7520d9aff43_add.py  cc6722d6f7a1_create_all_struct.py  cd40ecdb225f_init.py  d6a7710f3e1d_any_fix.py  (+6 more)
setting/: __init__.py  bot_setting.py  cinema.py  kinopoisk_parse.py
src/app/: __init__.py  (+1 more)
tests/: cinema.py  users.py
tg_bot/: bot.py  bot_app.py  entrypoint.py
(+134 files in other folders)
